--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-language_check==1.1
-nltk==3.3
-python_docx==0.8.6
-lxml==4.2.1
 Werkzeug==0.14.1
-spacy==2.0.11
+spacy==2.0.9
+python_docx==0.8.6
+lxml==3.5.0
+language_check==1.1
+sympound==0.2.0
+Flask==0.12
+numpy==1.14.2
+pyxDamerauLevenshtein==1.5
 textblob==0.15.1
-numpy==1.14.5
-Flask==1.0.2
+nltk==3.2.5
 docx==0.2.4
+jellyfish==0.6.1
 pattern==2.6
