--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ sympound==0.2.0
 Flask==0.12
 numpy==1.14.2
 pyxDamerauLevenshtein==1.5
-textblob==0.15.1
+textblob>=0.9.0,<=0.17.1
 nltk==3.2.5
 docx==0.2.4
 jellyfish==0.6.1
